# kth-on-rpi2

./: .gitignore  LICENSE.TXT  Makefile  README.md  README.rst  STATUS.md  conect_gdb  note.txct  sth_dynamic.sublime-workspace  target
core/: Makefile
core/config/hw/: beagleboard.cfg  beaglebone.cfg  ovp_arm9.cfg  ovp_integratorCP.cfg  raspberrypi2.cfg  u8500_ref.cfg
core/config/sw/: dtest.cfg  gp_benchmark.cfg  linux.cfg  minimal.cfg  testguest.cfg  trusted.cfg
core/hw/board/: README.md
core/hw/common/: guest_blob.h  hw_core_guest.c  hw_core_mem.c  hw_core_mem.h
core/hw/ld/: beaglebone.ld  ovp_arm9.ld  raspberrypi2.ld  sth_arm_1.ld  u8500_ref.ld  virt-hyper.ld
core/hw/soc/: README.md
core/hypervisor/: dmmu.c  dmmu.h  handlers.c  hyper.h  hyper_config_base.h  hypercalls.h  init.c  init_slave.c  mem.c  translate.c  uart_print.c
core/hypervisor/guest_config/: hyper_config.h  linux_config.c  minimal_config.c
core/hypervisor/hypercalls/: hyp_cache.c  hyp_cache.h  hyp_cpu.c  hyp_dmmu.c  hyp_interrupt.c  hyp_mmu.c  hyp_mmu.h  hyp_rpc.c  hypercalls.c
core/hypervisor/linux/: kuser.S  linux_init.c  linux_signal.h
core/include/: hw.h  hw_hal.h  types.h
doc/How to Contribute/: Add New Platforms Guide.tex  Debugging on RPi2 Guide.tex  Hypervisor Guide.tex
drivers/: Makefile  README.md
drivers/include/: drivers.h
drivers/src/beagleboard/: uart.c
drivers/src/beaglebone/: uart.c
drivers/src/ovp_arm9/: uart.c
drivers/src/ovp_integratorCP/: soc_defs.h  uart.c
drivers/src/raspberrypi2/: uart.c
drivers/src/u8500_ref/: uart.c
guests/: Makefile  README.TXT  README.md
guests/dtest/: Makefile
guests/dtest/src/: dtest.h  low.S  main.c  print_err.h
guests/dtest1/: Makefile
guests/dtest1/src/: dtest.h  main.c
guests/dtest3/src/: print_err.h
guests/minimal/: Makefile  README.txt
guests/minimal/src/: hyper_config.h  minimal.c
guests/testguest/: Makefile
guests/testguest/src/: main.c
guests/trusted/: Makefile
guests/trusted/src/: aescbc.c  aescbc.h  mem.c  rsa.c  rsa.h  trusted_service.c  trusted_service.h  util.c
rpi2-port/: README  README.md  bcm2836.cfg  boot.scr  raspberrypi2.cfg
rpi2-port/Guide/: Guide.bib  Guide.tex
rpi2-port/test-kernel-1/: CMakeLists.txt  README  boot.S  configure.sh  kernel.c
rpi2-port/test-kernel-2/: CMakeLists.txt  README  boot.S  cstartup.c  kernel.c  linker.ld  rpi.x  toolchain-arm-none-eabi.cmake
rpi2-port/test-kernel-3/: CMakeLists.txt  README  boot.S  kernel.c  linker.ld
rpi2-port/test-kernel-3-standalone/: CMakeLists.txt  README  armjtag.list  kernel.c  vectors.s
simulation/: Makefile
simulation/generic_a8/src/: cortex_a8.c
simulation/ovp_arm9/: README.txt
simulation/ovp_arm9/src/: 926EJS.c
simulation/ovp_arm_any/: Makefile  README.txt
simulation/ovp_arm_any/src/: arm_any.c  data.c  history.c  (+5 more)
simulation/ovp_common/: breakpoint.c  debugger.c
simulation/ovp_integratorCP/: Makefile
templates/: README.TXT  README.md
templates/cpu/: arm9.cfg  cortex_a7.cfg  cortex_a8.cfg
templates/make/: application.inc  generic.inc  imperas.inc  library.inc  library_host.inc  test_host.inc  toolchain.inc  utils.inc
templates/platform/: beagleboard.cfg  beaglebone.cfg  ovp_arm9.cfg  ovp_integratorCP.cfg  raspberrypi2.cfg  u8500_ref.cfg
test/: Makefile  README.TXT  README.md
test/dtest/: Makefile  README  run.sh  test_parser.py
test/linux/: Makefile  deploy.sh  run.sh
test/memlib/: Makefile
test/uclib/: Makefile
test/utillib/: Makefile
utils/: Makefile  README.md
utils/guesthelper/: Makefile
(+138 files in other folders)
